# unit-evaluation

./: .gitignore  CMakeLists.txt  NOTES.md  README.md  build.sh  dimension_wasm_interface.ts  genform.sh  package-lock.json  package.json  run.sh  tsconfig.json  wasm.sh
formula_gen/: ALL.txt  all_formulas.json  formula_extractor.ts  formulas.json  formulas_capacitance.json  formulas_chemistry.json  formulas_current_resistance.json  formulas_dc_circuits.json  formulas_dynamics.json  formulas_electrostatics.json  formulas_energy_momentum.json  formulas_engineering.json  formulas_fluids.json  formulas_geometry.json  formulas_gravity.json  formulas_inductance.json  formulas_induction.json  formulas_kinematics.json  formulas_magnetic_sources.json  formulas_magnetism.json  formulas_misc.json  formulas_modern_physics.json  formulas_optics.json  formulas_oscillations_waves.json  formulas_rotational.json  formulas_thermodynamics.json  formulas_to_cpp.ts  rearrange.ts
src/: ast.cpp  ast.hpp  builtins.cpp  builtins.hpp  dimeval.cpp  dimeval.hpp  evaluator.cpp  evaluator.hpp  formula_finder.hpp  lexer.cpp  lexer.hpp  main.cpp  parser.cpp  parser.hpp  testing.hpp  token.hpp  value_utils.cpp  value_utils.hpp  wasm_api.cpp
src/formulas/: formulas_chemistry_acids_bases.cpp  formulas_chemistry_basic.cpp  formulas_chemistry_electrochemistry.cpp  formulas_chemistry_equilibrium.cpp  formulas_chemistry_kinetics.cpp  formulas_chemistry_solutions.cpp  formulas_chemistry_thermochemistry.cpp  formulas_circuits.cpp  formulas_circular_motion.cpp  formulas_dynamics.cpp  formulas_electromagnetic_waves.cpp  formulas_electrostatics.cpp  formulas_energy.cpp  formulas_fluids.cpp  formulas_gravity.cpp  formulas_induction.cpp  formulas_kinematics.cpp  formulas_magnetism.cpp  formulas_modern_physics.cpp  formulas_momentum.cpp  formulas_optics.cpp  formulas_oscillations.cpp  formulas_rotational_mechanics.cpp  formulas_thermodynamics.cpp  formulas_waves.cpp  physics_formulas.hpp  physics_formulas_batch0.cpp  physics_formulas_batch1.cpp  physics_formulas_batch10.cpp  physics_formulas_batch11.cpp  physics_formulas_batch12.cpp  physics_formulas_batch13.cpp  physics_formulas_batch14.cpp  physics_formulas_batch15.cpp  physics_formulas_batch16.cpp  physics_formulas_batch17.cpp  physics_formulas_batch18.cpp  physics_formulas_batch19.cpp  physics_formulas_batch2.cpp  physics_formulas_batch20.cpp  (+8 more)
